objects/LBI__LatticeAccountIFrameSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to override default iFrame location on AccountRecommendationList page.</description>
    <fields>
        <fullName>LBI__BaseURL__c</fullName>
        <description>Ex:  https://pls.lattice-engines.com/Dante3/</description>
        <label>Dante URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__CallBackURL__c</fullName>
        <label>Call Back URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__CustomSettingsString__c</fullName>
        <label>Custom Settings String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DefaultTab__c</fullName>
        <label>Default Tab</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__HasSalesPrism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Sales Prism</label>
        <type>Checkbox</type>
    </fields>
    <label>Lattice Account iFrame Settings (DEP)</label>
</CustomObject>